<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save_logs"
        android:icon="@drawable/ic_save_grey_24dp"
        android:orderInCategory="80"
        android:title="@string/settings_save_syslogs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share_logs"
        android:icon="@drawable/ic_share_grey_24dp"
        android:orderInCategory="80"
        android:title="@string/settings_share_syslogs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_toggle_logs"
        android:icon="@drawable/ic_save_grey_24dp"
        android:orderInCategory="80"
        android:checkable="true"
        android:title="@string/settings_toggle_syslogs"
        app:showAsAction="never" />

</menu>