<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mapActivityActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_normal"
        app:elevation="4dp" />

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativelayoutMap"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MergeRootFrame">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="310dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#33000000"
            android:orientation="vertical">
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_map_layers"
            android:src="@drawable/ic_map_grey_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:background="#00ffffff"
            android:contentDescription="@string/map_choose_layer"
            android:tooltipText="@string/map_choose_layer"
            android:cropToPadding="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_center_map"
            android:src="@drawable/ic_crosshairs_gps_grey_24dp"
            android:layout_below="@+id/ic_map_layers"
            android:layout_alignLeft="@+id/ic_map_layers"
            android:layout_alignStart="@+id/ic_map_layers"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="#00ffffff"
            android:contentDescription="@string/center_map"
            android:tooltipText="@string/center_map"
            android:cropToPadding="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_follow_me"
            android:src="@drawable/ic_directions_grey_24dp"
            android:background="#00ffffff"
            android:contentDescription="@string/follow_me"
            android:tooltipText="@string/follow_me"
            android:cropToPadding="true"
            android:layout_below="@+id/ic_center_map"
            android:layout_alignLeft="@+id/ic_center_map"
            android:layout_alignStart="@+id/ic_center_map"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_zoom_all"
            android:src="@drawable/ic_magnify_grey_24dp"
            android:background="#00ffffff"
            android:contentDescription="@string/zoom_all_markers"
            android:tooltipText="@string/zoom_all_markers"
            android:cropToPadding="true"
            android:layout_below="@+id/ic_follow_me"
            android:layout_alignLeft="@+id/ic_center_map"
            android:layout_alignStart="@+id/ic_follow_me"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_zoom_auto"
            android:src="@drawable/ic_magnify_plus_outline_grey_24dp"
            android:background="#00ffffff"
            android:contentDescription="@string/auto_zoom"
            android:tooltipText="@string/auto_zoom"
            android:cropToPadding="true"
            android:layout_below="@+id/ic_zoom_all"
            android:layout_alignLeft="@+id/ic_center_map"
            android:layout_alignStart="@+id/ic_zoom_all"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_allow_rotation"
            android:src="@drawable/ic_rotate_left_black_24dp"
            android:background="#00ffffff"
            android:contentDescription="@string/allow_rotation"
            android:tooltipText="@string/allow_rotation"
            android:cropToPadding="true"
            android:layout_below="@+id/ic_zoom_auto"
            android:layout_alignLeft="@+id/ic_center_map"
            android:layout_alignStart="@+id/ic_zoom_all"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>
    </RelativeLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

